breaking: refactor(routes): merge uptime into validator endpoint
